--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Faça já seu Cadastro</title>
-  <link rel="canonical" href="https://chatmoney.academy/"/>
+  <link rel="canonical" href="https://chatmoney.xyz/"/>
   <style>
     body {
       font-family: Arial, sans-serif;
