--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta name="description" content="Como Fazer Trafego Pago e Ganhar Dinheiro Como Afiliado da Shopee, Kiwify, Mercado Livre, Amazon, Hotmart e muito mais. Confira nesse Artigo." />
 	<meta name="keywords" content="afiliado, trafego pago, vender como afiliado, ganhar dinheiro, como ganhar dinheiro, afilido shopee, afiliado amazon, afiliado mercado livre, afiliado kiwify, afiliados, programa de afiliados.">
 	<meta name="author" content="Jean Soleto">
-	<link rel="canonical" href="https://afiliado.bio/">
+	<link rel="canonical" href="https://chatmoney.xyz/">
 	<meta property="og:title" content="Blog dos Afiliados">
 	<meta property="og:description" content="Blog dos Afiliados. Aprenda Como Ganhar Dinheiro Sendo Afiliado da Shopee, Kiwify, PerfectPay e muito mais.">
 	<meta property="og:type" content="article">
