--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+	<base href="https://afiliado.bio/" >
+	
 	<!-- Google Tag Manager -->
 <script type="2551b0f74f4eb46cc79ea0c0-text/javascript">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
